<resources>
    <string name="app_name">V Festival</string>

    /* Titles */
    <string name="title_info">Info</string>
    <string name="title_lineup">Line Up</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_activity_splash">SplashActivity</string>

    /* General */
    <string name="or">OR</string>

    /*Auth */
    <string name="btn_sign_out">Sign Out</string>
    <string name="prompt_password">Password Required</string>
    <string name="title_activity_login">Log in</string>
    <string name="hint_email">Email</string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_old_email">Old Email</string>
    <string name="hint_confirm_email">Confirm Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="default_email"> </string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login In!</string>
    <string name="register">Register</string>
    <string name="Registration">Registration</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Login failed, check your email and password or sign up</string>
    <string name="reg_failed">registration failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Forgotten password</string>
    <string name="password_reset_email_description">To reset your password please enter your email address bellow and we will contact you shortly with a link to reset your password.</string>
    <string name="reset_password">Reset password</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account?</string>
    <string name="yes_delete_account">Yes, delete my account</string>
    <string name="no_delete_account">No, save my account</string>
    <string name="please_login">Please Login to book tickets</string>
    <string name="update_email">Update email address</string>
    <string name="update_password">Update Password</string>

    /* DropDown */
    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="days">
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    /* info array list */
    <string-array name="catagories">
        <item>Opening Times</item>
        <item>Age Restrictions</item>
        <item>Valid Id</item>
        <item>What you can / can't bring"</item>
        <item>Travel and transport</item>
        <item>Safety and security</item>
    </string-array>


    <string-array name="catagories_info">
        <item>&lt;b>Car Parks: &lt;/b> 9am Friday &lt;br /&gt; &lt;b>Campsites: &lt;/b> 12:00 Friday &lt;br /&gt; &lt;b>Box office: &lt;/b> 13:00 Friday</item>
        <item>V Festival is not a suitable festival for young children. Children under 10 are not permitted, 16 and under must be accompanied by an adult aged 18 or over.</item>
        <item>All adults must bring a valid form of UK identification (Passport, Driving licence).</item>
        <item>Large bags are permitted within the camp site area, only small bags are permitted on the festival floor and bag searches will be required on entering the festival.</item>
        <item>&lt;b>Traveling to the festival by car: &lt;/b> &lt;br /&gt; please follow signs for V Festival to find your way to the main car park, on arrival you will be require to pay £20.00 fee for parking (this is per weekend)</item>
        <item>At V Festival we do not accept any discrimination towards any individual or groups of individuals. Any individuals are causing problems they will be immediately removed and any necessary further action will be taken if required.</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
